--- a/templates/catalog/base.html.twig
+++ b/templates/catalog/base.html.twig
@@ -8,10 +8,17 @@
 {% endblock %}
 
 {% block body %}
+  {% include 'catalog/layouts/header.html.twig' %}
+  {% include 'catalog/layouts/navbar.html.twig' %}
+  {% include 'catalog/layouts/breadcrumbs.html.twig' %}
+
   {% block catalog_body %}{% endblock %}
+
   {% if app.request.get('_route') == 'catalog_index' %}
     <div id="catalog-app"></div>
   {% endif %}
+
+  {% include 'catalog/layouts/footer.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
