--- a/templates/catalog/cart/index.html.twig
+++ b/templates/catalog/cart/index.html.twig
@@ -40,6 +40,14 @@
     <div class="mt-4 text-right text-lg">
       Итого: <span id="cart-total">{{ (cart.total/100)|number_format(2, '.', ' ') }}</span> {{ cart.currency }}
     </div>
+
+  {% if cart.items|length > 0 %}
+    <div class="mt-6 flex justify-end">
+      <a href="{{ path('checkout_page') }}" class="inline-flex items-center px-4 py-2 rounded bg-black text-white hover:bg-gray-900">
+        Оформить заказ
+      </a>
+    </div>
+  {% endif %}
   </div>
 
   <script type="module">
