--- a/templates/catalog/layouts/breadcrumbs.html.twig
+++ b/templates/catalog/layouts/breadcrumbs.html.twig
@@ -1,38 +1,70 @@
 {% set list = breadcrumbs|default(items|default([])) %}
 {% if list is not empty %}
-  <nav class="font-sans text-sm pt-5" aria-label="breadcrumb">
-    <ol class="list-none p-0 inline-flex flex-wrap">
+  <nav aria-label="Breadcrumb" class="pt-5">
+    <ol class="flex items-center gap-1 text-sm text-gray-700">
+      <li>
+        <a href="/" class="block transition-colors hover:text-gray-900" aria-label="Home">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+            />
+          </svg>
+        </a>
+      </li>
+
       {% for crumb in list %}
-        {% if not loop.last %}
-          {% if crumb.label is defined %}
-            <li class="flex items-center">
-              <a href="{{ crumb.url|default('#') }}" class="hover:text-blue-600">{{ crumb.label }}</a>
-              <span class="mx-1 text-gray-400" aria-hidden="true">
-                <svg xmlns="http://www.w3.org/2000/svg" class="inline h-3 w-3" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                </svg>
-              </span>
-            </li>
-          {% else %}
-            {% for name, link in crumb %}
-              <li class="flex items-center">
-                <a href="{{ link }}" class="hover:text-blue-600">{{ name }}</a>
-                <span class="mx-1 text-gray-400" aria-hidden="true">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="inline h-3 w-3" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-                  </svg>
-                </span>
-              </li>
-            {% endfor %}
-          {% endif %}
+        {% set isHomeCrumb = false %}
+        {% if crumb.label is defined %}
+          {% set isHomeCrumb = crumb.label|lower == 'главная' or (crumb.url|default('') == '/') %}
         {% else %}
-          {% if crumb.label is defined %}
-            <li class="flex items-center hidden sm:block text-gray-800">{{ crumb.label }}</li>
+          {% for name, link in crumb %}
+            {% set isHomeCrumb = name|lower == 'главная' or link == '/' %}
+          {% endfor %}
+        {% endif %}
+        {% if not isHomeCrumb %}
+        <li class="rtl:rotate-180">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="size-4"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </li>
+
+        <li>
+          {% if not loop.last %}
+            {% if crumb.label is defined %}
+              <a href="{{ crumb.url|default('#') }}" class="block transition-colors hover:text-gray-900">{{ crumb.label }}</a>
+            {% else %}
+              {% for name, link in crumb %}
+                <a href="{{ link }}" class="block transition-colors hover:text-gray-900">{{ name }}</a>
+              {% endfor %}
+            {% endif %}
           {% else %}
-            {% for name, link in crumb %}
-              <li class="flex items-center hidden sm:block text-gray-800">{{ name }}</li>
-            {% endfor %}
+            {% if crumb.label is defined %}
+              <span class="text-gray-800">{{ crumb.label }}</span>
+            {% else %}
+              {% for name, link in crumb %}
+                <span class="text-gray-800">{{ name }}</span>
+              {% endfor %}
+            {% endif %}
           {% endif %}
+        </li>
         {% endif %}
       {% endfor %}
     </ol>
