--- a/templates/catalog/product/show.html.twig
+++ b/templates/catalog/product/show.html.twig
@@ -15,7 +15,7 @@
             {% set imgSrc = raw %}
           {% else %}
             {% set rel = raw|replace({'/img/':''})|trim('/') %}
-            {% set imgSrc = path('media_image_cache', { size: '500x500', path: rel }) %}
+            {% set imgSrc = asset('/img/' ~ rel) | imagine_filter('md2') %}
           {% endif %}
           <img src="{{ imgSrc }}" alt="{{ product.name }}" class="w-full h-auto rounded-md shadow" />
         {% else %}
