--- a/templates/catalog/layouts/header.html.twig
+++ b/templates/catalog/layouts/header.html.twig
@@ -66,8 +66,8 @@
           
           <!-- Hotline -->
           <div class="hidden lg:flex flex-col items-center text-center">
-            <div class="text-xs text-gray-500 font-medium">Горячая линия:</div>
-            <div class="text-sm font-semibold text-gray-800">(+7) 123 456 7890</div>
+            <div class="text-xs text-gray-500 font-medium">Номер телефона:</div>
+            <div class="text-sm font-semibold text-gray-800">{{ contacts('phone') }}</div>
           </div>
 
           <!-- User Account -->
